// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for interactive 1`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    name="interactive-checkboxes"
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      Vanilla
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Vanilla
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for interactive 2`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    name="interactive-checkboxes"
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      Chocolate
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Chocolate
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for interactive 3`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    name="interactive-checkboxes"
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      Strawberry
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Strawberry
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for interactive 4`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    name="interactive-checkboxes"
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      Polaroid four dollar toast bespoke succulents. Kickstarter truffaut PBR&B fashion axe, lyft actually viral everyday carry iPhone tote bag mumblecore umami. Skateboard you probably haven't heard of them before they sold out, edison bulb paleo poutine jianbing blue bottle mixtape. Normcore farm-to-table coloring book cliche before they sold out. Roof party authentic hoodie paleo next level, bicycle rights selvage you probably haven't heard of them leggings venmo etsy cronut williamsburg. Dreamcatcher vice gastropub austin fam. Actually subway tile kickstarter, messenger bag shabby chic activated charcoal lomo.
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Polaroid four dollar toast bespoke succulents. Kickstarter truffaut PBR&B fashion axe, lyft actually viral everyday carry iPhone tote bag mumblecore umami. Skateboard you probably haven't heard of them before they sold out, edison bulb paleo poutine jianbing blue bottle mixtape. Normcore farm-to-table coloring book cliche before they sold out. Roof party authentic hoodie paleo next level, bicycle rights selvage you probably haven't heard of them leggings venmo etsy cronut williamsburg. Dreamcatcher vice gastropub austin fam. Actually subway tile kickstarter, messenger bag shabby chic activated charcoal lomo.
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for interactive 5`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    name="interactive-checkboxes"
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      Unicorn helvetica glossier pop-up letterpress snackwave raw denim. Lomo blog tattooed helvetica seitan DIY. Tbh kombucha shabby chic cornhole, microdosing seitan snackwave gastropub celiac. Biodiesel 90's fixie drinking vinegar literally unicorn readymade fap, vape wolf direct trade kickstarter pickled disrupt fashion axe. Heirloom subway tile hell of, austin portland meditation PBR&B tacos raclette. Prism fanny pack banh mi trust fund unicorn, thundercats chicharrones salvia pour-over VHS. Distillery organic pork belly squid.
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Unicorn helvetica glossier pop-up letterpress snackwave raw denim. Lomo blog tattooed helvetica seitan DIY. Tbh kombucha shabby chic cornhole, microdosing seitan snackwave gastropub celiac. Biodiesel 90's fixie drinking vinegar literally unicorn readymade fap, vape wolf direct trade kickstarter pickled disrupt fashion axe. Heirloom subway tile hell of, austin portland meditation PBR&B tacos raclette. Prism fanny pack banh mi trust fund unicorn, thundercats chicharrones salvia pour-over VHS. Distillery organic pork belly squid.
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for interactive 6`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    name="interactive-checkboxes"
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      Heirloom keffiyeh schlitz cray. Keytar tumblr dreamcatcher art party polaroid, sriracha etsy pinterest typewriter. IPhone ugh williamsburg man bun waistcoat literally paleo direct trade. Taxidermy cold-pressed pabst green juice, freegan tumblr post-ironic everyday carry disrupt distillery. Hell of lumbersexual cliche, whatever tilde raclette pop-up blue bottle skateboard butcher meditation four dollar toast tattooed health goth pinterest. Poutine polaroid YOLO, biodiesel chambray gentrify microdosing kickstarter bushwick humblebrag yr cred intelligentsia you probably haven't heard of them. Blog meditation locavore tousled, edison bulb cronut occupy +1 you probably haven't heard of them echo park distillery chambray.
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Heirloom keffiyeh schlitz cray. Keytar tumblr dreamcatcher art party polaroid, sriracha etsy pinterest typewriter. IPhone ugh williamsburg man bun waistcoat literally paleo direct trade. Taxidermy cold-pressed pabst green juice, freegan tumblr post-ironic everyday carry disrupt distillery. Hell of lumbersexual cliche, whatever tilde raclette pop-up blue bottle skateboard butcher meditation four dollar toast tattooed health goth pinterest. Poutine polaroid YOLO, biodiesel chambray gentrify microdosing kickstarter bushwick humblebrag yr cred intelligentsia you probably haven't heard of them. Blog meditation locavore tousled, edison bulb cronut occupy +1 you probably haven't heard of them echo park distillery chambray.
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for label-as-child 1`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      Just text
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Just text
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for label-as-child 2`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      <span>
        HTML element
      </span>
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    <span>
      HTML element
    </span>
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for label-as-prop 1`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginRight": "5px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Just text
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for label-as-prop 2`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginRight": "5px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <div
    className="lucid-CheckboxLabeled-label"
  >
    <span>
      HTML element
    </span>
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for label-as-prop 3`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginRight": "5px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Text in an array
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for label-as-prop 4`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginRight": "5px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <div
    className="lucid-CheckboxLabeled-label"
  >
    <span>
      HTML element in an array
    </span>
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for states 1`] = `
<label
  className="lucid-CheckboxLabeled"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      (default props)
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    (default props)
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for states 2`] = `
<label
  className="lucid-CheckboxLabeled lucid-CheckboxLabeled-is-disabled"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={true}
    isIndeterminate={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      Disabled
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Disabled
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for states 3`] = `
<label
  className="lucid-CheckboxLabeled lucid-CheckboxLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={false}
    isIndeterminate={false}
    isSelected={true}
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      Selected
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Selected
  </div>
</label>
`;

exports[`CheckboxLabeled [common] example testing should match snapshot(s) for states 4`] = `
<label
  className="lucid-CheckboxLabeled lucid-CheckboxLabeled-is-disabled lucid-CheckboxLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <Checkbox
    className="lucid-CheckboxLabeled-Checkbox"
    isDisabled={true}
    isIndeterminate={false}
    isSelected={true}
    onSelect={[Function]}
  >
    <CheckboxLabeled.Label>
      Disabled & selected
    </CheckboxLabeled.Label>
  </Checkbox>
  <div
    className="lucid-CheckboxLabeled-label"
  >
    Disabled & selected
  </div>
</label>
`;
